Give the container around the <TimerDisplay>'s a min-width to stop the jumping

--- a/src/Components/EpisodePlayerBar/EpisodePlayerBar.scss
+++ b/src/Components/EpisodePlayerBar/EpisodePlayerBar.scss
@@ -20,6 +20,8 @@ $bar-height: 60px;
             display: flex;
             align-items: center;
             justify-content: center;
+            min-width: 115px;
+            text-align: center;
 
             .divider {
                 color: white;
